--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
-/node_modules
-yarn.lock
 /config/keys_dev.js
+
+node_modules/**/*
+.expo/*
+npm-debug.*
+*.jks
+*.p12
+*.key
+*.mobileprovision
+
+yarn.lock
