--- a/InstagramClone/package.json
+++ b/InstagramClone/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^32.0.0",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-navigation": "^3.8.1"
