--- a/InstagramClone/package.json
+++ b/InstagramClone/package.json
@@ -13,6 +13,7 @@
     "mobx-react": "^5.4.3",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-elements": "^1.1.0",
     "react-navigation": "^3.8.1"
   },
   "devDependencies": {
