Modify Friends endpoints

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
-    "mongoose": "^5.5.4"
+    "mongodb": "^3.2.5",
+    "mongoose": "^5.5.11"
   }
 }
